2014-05-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m:
	* Source/NSURLProtocol.m:
	When creating the 'Host' header, omit the port part if the scheme is
	http/https and the port is the normal 80/443.  A workaround for buggy
	software which doesn't understand the spec saying that the port is
	'optional', not 'omitted' in these cases.

2014-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDebug.m:
	* Headers/Foundation/NSDebug.h:
	Add GSDebugAllocationRecordObjects()
	and deprecate GSDebugAllocationActiveRecordingObjects()
	so we can turn individual object tracking on and off.
	Move documentation from source to header.

2014-05-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.m: Fix ifdefs for MINGW to avoid fork relatred code.

2014-05-05  Ivan Vucica <ivan@vucica.net>

	* GNUmakefile: gnustep-make's Master/deb.make now included.
	* Tests/GNUmakefile: gnustep-tests --clean is now permitted to
	fail. This helps in case 'make {dist,}clean' is called by some
	automation.

2014-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Set initial state of accepted incoming
	connection streams to be open (otherwise we can't close them).

2014-04-26  Manuel Guesdon <mguesdon@orange-concept.com>
	* Source/NSKeyValueCoding.m
	  Fix exception msg in setValue:forUndefinedKey:
	
2014-04-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSHost.h:
	* Source/NSHost.m:
	Add OSX 10.6 -localizedName method.

2014-04-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRegularExpression.m: Check for bad range from ICU and
	flag an internal error if we see it; mimic OSX behavior when a
	range limited match fails.

2014-04-11  Fred Kiefer <fredkiefer@gmx.de>

	* Headers/Foundation/NSXMLNodeOptions.h: Add new 10.7 options.
	* Source/NSXMLDocument.m: Use XML_PARSE_NONET as the default
	option for xmlReadMemory. Add XML_PARSE_NOENT when
	NSXMLNodeLoadExternalEntitiesNever is set.
